# sharecar

./: .ghci  .gitignore  Dockerfile  README.md  sharecar.cabal
app/: Main.hs  Migrate.hs  Seed.hs
db/: db.sqlite3
lib/: Form.hs  Template.hs  form.hs  template.hs  utils.hs  view.hs
lib/Model/: Car.hs  Occupation.hs
lib/Route/: Gas.hs  Reservation.hs  Url.hs
lib/View/: Gas.hs  Reservation.hs  Type.hs  Widget.hs
lib/model/: car.hs  gas.hs  occupation.hs  reservation.hs  session.hs  type.hs  user.hs
lib/route/: login.hs  occupation.hs  reservation.hs  url.hs
lib/view/: car.hs  default.hs  occupation.hs  reservation.hs  widget.hs
